k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

  labels:
    app: backend

spec:
  selector:
    app: backend

  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000

  type: ClusterIP
