k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: p377-ingress

spec:
  rules:
    - host: p377.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 5000

          - path: /deployments
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 5000

          - path: /auth
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 5000

          - path: /github
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 5000

          - path: /health
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 5000
